# tencent-meeting

./: README.md  tencent-meeting.cabal
src/Tencent/: Meeting.hs
src/Tencent/Meeting/: Error.hs  REST.hs  Types.hs
test/Tencent/Meeting/: RESTSpec.hs
tools/: manage.hs
